<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_grp_mobility"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_yourtrips"
            android:title="@string/menu_yourtrips" />
        <item
            android:id="@+id/nav_yourpastmob"
            android:title="@string/menu_yourpastmob" />
        <item
            android:id="@+id/nav_yourpredmob"
            android:title="@string/menu_yourpredmob" />
    </group>

    <group
        android:id="@+id/nav_grp_settings">
        <!--<item
                android:id="@+id/nav_payment"
                android:title="@string/menu_payment"/>-->
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_profile"
            android:title="Profile" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout" />
    </group>

    <group
        android:id="@+id/nav_grp_help">
        <item
            android:id="@+id/nav_help"
            android:title="@string/menu_help" />
    </group>

</menu>
